--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
             <input type="text" name="display" id="display">
           </div>
           <div>
-            <input type="button" value="AC" onclick="clearLastInput()" id="clearButton" class="other">
+            <input type="button" value="AC" onclick="clearAll()" id="clearButton" class="other">
             <input type="button" value="+/-" onclick="toggleSign()" class="other">
             <input type="button" value="%" onclick="calculatePercentage()" class="other">
-            <input type="button" value="÷" onclick="display.value += '/' " class="operator">
+            <input type="button" value="÷" onclick="setOperator(this)" class="operator">
           </div>
           <div>
-            <input type="button" value="7" onclick="display.value += '7' " class="number">
-            <input type="button" value="8" onclick="display.value += '8' " class="number">
-            <input type="button" value="9" onclick="display.value += '9' " class="number">
-            <input type="button" value="x" onclick="display.value += '*' " class="operator">
+            <input type="button" value="7" onclick="appendNumber(7)" class="number">
+            <input type="button" value="8" onclick="appendNumber(8)" class="number">
+            <input type="button" value="9" onclick="appendNumber(9)" class="number">
+            <input type="button" value="x" onclick="setOperator(this)" class="operator" id="multiplyButton">
           </div>
           <div>
-            <input type="button" value="4" onclick="display.value += '4' " class="number">
-            <input type="button" value="5" onclick="display.value += '5' " class="number">
-            <input type="button" value="6" onclick="display.value += '6' " class="number">
-            <input type="button" value="-" onclick="display.value += '-' " class="operator">
+            <input type="button" value="4" onclick="appendNumber(4)" class="number">
+            <input type="button" value="5" onclick="appendNumber(5)" class="number">
+            <input type="button" value="6" onclick="appendNumber(6)" class="number">
+            <input type="button" value="-" onclick="setOperator(this)" class="operator">
           </div>
           <div>
-            <input type="button" value="1" onclick="display.value += '1' " class="number">
-            <input type="button" value="2" onclick="display.value += '2' " class="number">
-            <input type="button" value="3" onclick="display.value += '3' " class="number">
-            <input type="button" value="+" onclick="display.value += '+' " class="operator">
+            <input type="button" value="1" onclick="appendNumber(1)" class="number">
+            <input type="button" value="2" onclick="appendNumber(2)" class="number">
+            <input type="button" value="3" onclick="appendNumber(3)" class="number">
+            <input type="button" value="+" onclick="setOperator(this)" class="operator">
           </div>
           <div>
-            <input type="button" value="0" onclick="display.value += '0' " class="zero">
+            <input type="button" value="0" onclick="appendNumber(0)" class="zero">
             <input type="button" value="." onclick="display.value += '.' " class="number">
-            <input type="button" value="=" class="operator" onclick="calculate()">
+            <input type="button" value="=" class="operator" onclick="calculate()" id="equalButton">
           </div>
         </form>
       </div>
