--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
             <input type="button" value="AC" onclick="clearAll()" id="clearButton" class="other">
             <input type="button" value="+/-" onclick="toggleSign()" class="other">
             <input type="button" value="%" onclick="calculatePercentage()" class="other">
-            <input type="button" value="÷" onclick="setOperator(this)" class="operator">
+            <input type="button" value="÷" onclick="setOperator('/')" class="operator">
           </div>
           <div>
             <input type="button" value="7" onclick="appendNumber(7)" class="number">
             <input type="button" value="8" onclick="appendNumber(8)" class="number">
             <input type="button" value="9" onclick="appendNumber(9)" class="number">
-            <input type="button" value="x" onclick="setOperator(this)" class="operator" id="multiplyButton">
+            <input type="button" value="x" onclick="setOperator('*')" class="operator">
           </div>
           <div>
             <input type="button" value="4" onclick="appendNumber(4)" class="number">
             <input type="button" value="5" onclick="appendNumber(5)" class="number">
             <input type="button" value="6" onclick="appendNumber(6)" class="number">
-            <input type="button" value="-" onclick="setOperator(this)" class="operator">
+            <input type="button" value="-" onclick="setOperator('-')" class="operator">
           </div>
           <div>
             <input type="button" value="1" onclick="appendNumber(1)" class="number">
             <input type="button" value="2" onclick="appendNumber(2)" class="number">
             <input type="button" value="3" onclick="appendNumber(3)" class="number">
-            <input type="button" value="+" onclick="setOperator(this)" class="operator">
+            <input type="button" value="+" onclick="setOperator('+')" class="operator">
           </div>
           <div>
             <input type="button" value="0" onclick="appendNumber(0)" class="zero">
